--- a/Eastnetic/Client/Eastnetic.Client.csproj
+++ b/Eastnetic/Client/Eastnetic.Client.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Eastnetic.BLL\Eastnetic.BLL.csproj" />
     <ProjectReference Include="..\Shared\Eastnetic.Shared.csproj" />
   </ItemGroup>
 
