--- a/Eastnetic.BLL/Eastnetic.BLL.csproj
+++ b/Eastnetic.BLL/Eastnetic.BLL.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Eastnetic.DAL\Eastnetic.DAL.csproj" />
   </ItemGroup>
 
